fixed letter spacing of textarea

--- a/css/style.css
+++ b/css/style.css
@@ -120,9 +120,6 @@ footer {
   width: 620px;
   height: 150px;
   margin: 15px;
-  font-family: 'Oswald', sans-serif;
-  font-size: 14px;
-  letter-spacing: 2px;
 }
 
 .setup {
@@ -143,12 +140,13 @@ footer {
 }
 
 .player-typing {
-  width: 600px;
+  width: 580px;
   height: 120px;
-  margin: 15px;
+  margin: 18px;
   font-family: 'Oswald', sans-serif;
-  font-size: 14px;
+  font-size: 14.5px;
   border: 1px solid black;
+  letter-spacing: 2px;
 }
 
 .in-game-functions {
